--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         }
         #logo{
             width: 250px;
-            height: auto;
-            margin-left: 450px;
+            height: auto;            
+        }
+        #header {
+            text-align: center;
         }
         #menu-bar li{
             display: inline-block;
